...
                onClick = {
                    clickLeft()
                }
            )
            NavigationBarItem(
                modifier = Modifier.semantics {
                    contentDescription = "SearchGroupsTab"
                },
                icon = {
                    Icon(
                        if (item == 1) Icons.Rounded.Groups else Icons.Outlined.Groups,
                        contentDescription = null,
                        tint = MaterialTheme.colorScheme.onPrimary
...
